[twitter] support for extended tweet

BUG: 370260
FIXED-IN: 1.7